# reporesolve

./: .gitignore  LICENSE  README.md  architecture.md  pyproject.toml
examples/: example_project.yml  sample_run.md
reporesolve/: __init__.py
reporesolve/agent/: memory.py  planner.py  schema.py
reporesolve/cli/: __init__.py  main.py
reporesolve/config/: env.py  settings.py
reporesolve/providers/: anthropic_provider.py  base.py  openai_provider.py
reporesolve/storage/: paths.py
reporesolve/supervisor/: doctor.py  state.py  supervisor.py  workflow.py
reporesolve/tools/: base.py  build.py  clone.py  inspect.py  install.py  parse.py  smoke.py
reporesolve/tui/: flows.py  prompts.py  render.py
reporesolve/utils/: logging.py
